--- a/to_do_list_website/templates/home.html
+++ b/to_do_list_website/templates/home.html
@@ -149,11 +149,7 @@
             <button id="taskInputSubmit" onclick="add_task()">+</button>
         </div>
         <div id="centerPart">
-            <div id="info">
-                <div class="info red">High Priority</div>
-                <div class="info orange">Medium Priority</div>
-                <div class="info green">Low Priority</div>
-            </div>
+         
             <ul>
                 {% if li %}
                 {% for l in li %}
@@ -172,6 +168,7 @@
                 {% endif %}
             </ul>
         </div>
+        <p>Number of tasks are {{count}}</p>
     </div>
 
     <script>
